--- a/styles.css
+++ b/styles.css
@@ -9,3 +9,112 @@ body {
     max-width: 960px;
     width: 100%;
 }
+
+header .container {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+header nav ul {
+    list-style-type: none;
+    display: flex;
+    gap: 20px;  
+}
+
+.overview-hero .container {
+    display: flex;
+    align-items: center;
+    gap: 30px;
+    padding: 40px;    
+}
+
+.overview-hero img{
+    height: 150px;
+    width: 150px;  
+}
+
+.overview-hero-text {
+   padding: 50px;
+    flex: 1;  
+}
+
+.cards{
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap:40px;   
+    padding: 30px;
+}
+
+.card{
+    display: flex;
+    flex-direction: column;
+    align-items:center;
+    text-align: left; 
+}
+
+.card img {
+    width: auto; 
+    height: 150px;
+    margin-bottom: 20px;
+}
+
+.testing .container {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    gap: 60px;
+    padding: 50px;
+}
+
+.testing-description {
+    flex: 1;      
+}
+
+.stories .container{
+    padding: 60px;
+}
+
+.stories article{
+    display: flex;
+    align-items: flex-start;
+    gap: 40px;
+    padding: 20px;
+}
+
+.stories img {
+    width: 150px;
+    height: 150px;
+    border-radius: 100%;
+}
+
+.article-body{
+    flex: 1;
+}
+
+.newsletter {
+    text-align: center;
+    padding: 70px;
+    
+}
+
+.newsletter p {
+   
+   padding: 0px, 40px;
+}
+
+.form-group {
+    display: inline-flex;    
+    align-items: center;
+    margin-top: 20px;
+}
+
+.form-group input[type="email"] {
+    padding: 10px;
+    margin-right: 10px;
+
+}
+
+button.btn {
+    padding: 10px 20px;
+}
