--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,7 @@
-/* Add your CSS to this file */
 body {
     margin: 0;
-    font-size: 16px;
+    font-family: -apple-system,BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif;
+    font-size: 18px;
 }
 
 .container {
@@ -10,47 +10,80 @@ body {
     width: 100%;
 }
 
+header h1{
+    font-size: 18px;
+}
+
+header a {
+    font-size: 18px;
+    color: #6b7280; 
+    text-decoration: none;   
+}
+
+header a:hover {
+    color:#5A67D8;
+}
+
 header .container {
     display: flex;
     align-items: center;
     justify-content: space-between;
+    background-color: white;
 }
 
 header nav ul {
     list-style-type: none;
     display: flex;
-    gap: 20px;  
+    gap: 20px;       
+}
+ 
+.overview-hero {
+    background-color: #E2E8F0;    
 }
 
 .overview-hero .container {
     display: flex;
     align-items: center;
-    gap: 30px;
-    padding: 40px;    
+    gap: 20px;
+    padding: 20px;         
 }
 
 .overview-hero img{
-    height: 150px;
-    width: 150px;  
+    height: 200px;
+    width: 200px;  
 }
 
 .overview-hero-text {
    padding: 50px;
-    flex: 1;  
+   flex: 1; 
+}
+
+.learn-about h2 {
+    color: #48BB78 ;
+    font-size: 24px;
+}
+
+.learn-about h3 {
+    color:#48BB78;
+    font-size: 21px;
 }
 
 .cards{
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     gap:40px;   
-    padding: 30px;
+    padding: 30px;   
 }
 
 .card{
     display: flex;
     flex-direction: column;
     align-items:center;
-    text-align: left; 
+    text-align: left;
+    border: 2px solid #E2E8F0; 
+    border-radius: 5px; 
+    box-shadow: 2px 5px rgba(0, 0, 0, 0.1);
+    padding: 5px 20px; 
 }
 
 .card img {
@@ -59,12 +92,25 @@ header nav ul {
     margin-bottom: 20px;
 }
 
+.testing  {
+    background-color: #4A5568;
+    color: white;    
+}
+
+.testing .btn {
+    background-color:#48BB78;
+    color:white;
+    padding: 15px 55px;
+    border-radius: 5px;
+    text-decoration: none;
+}
+
 .testing .container {
     display: flex;
     align-items: center;
     justify-content: space-between;
     gap: 60px;
-    padding: 50px;
+    padding: 80px;        
 }
 
 .testing-description {
@@ -72,7 +118,15 @@ header nav ul {
 }
 
 .stories .container{
-    padding: 60px;
+    padding: 70px;
+}
+
+.stories h2, article a{
+    color: #5A67D8
+}
+
+.stories article h3{
+    font-size: 18px;
 }
 
 .stories article{
@@ -83,7 +137,7 @@ header nav ul {
 }
 
 .stories img {
-    width: 150px;
+    width: 180px;
     height: 150px;
     border-radius: 100%;
 }
@@ -94,15 +148,17 @@ header nav ul {
 
 .newsletter {
     text-align: center;
-    padding: 70px;
-    
+    padding: 50px 20px;
+    background-color: #48BB78;
+    color: white;       
 }
 
-.newsletter p {
-   
-   padding: 0px, 40px;
+.newsletter p {  
+    max-width: 500px;
+    margin: auto; 
+    text-align: left;    
 }
-
+ 
 .form-group {
     display: inline-flex;    
     align-items: center;
@@ -110,11 +166,22 @@ header nav ul {
 }
 
 .form-group input[type="email"] {
-    padding: 10px;
+    padding: 20px 85px;
     margin-right: 10px;
-
+    border-radius: 5px;
+    border: none;
 }
 
 button.btn {
-    padding: 10px 20px;
+    padding: 20px 40px;
+    background-color: #5A67D8;
+    color: white;
+    border-radius: 5px;
+    border: none;
+}
+
+footer  {
+    background-color:#4A5568 ;
+    color: white;
+    padding: 10px;
 }
